Fix file permissions and spacing. Rename files to match extension name.
Properly attach attachments to system topic.

Ticket: #9304
Release-Note: None

--- a/pub/System/AppManagerPlugin/appmanager.css
+++ b/pub/System/AppManagerPlugin/appmanager.css
@@ -1,76 +1,75 @@
 .clear {
-	clear: both;
+    clear: both;
 }
 .singleAppContainer {
-	border: 2px dotted #a7d7f9;
+    border: 2px dotted #a7d7f9;
     border-radius: 5px;
     height: 140px;
     padding: 5px;
 }
 .singleAppName {
-    color: #06c;
     font-size: 25px;
     text-align: center;
     float: left;
-	width: 22%;
-	height: 85px;
+    width: 22%;
+    height: 85px;
     padding-top: 58px;
     border-right: 2px dotted #a7d7f9;
 }
 .singleAppDescription {
-	border-right: 2px dotted #a7d7f9;
+    border-right: 2px dotted #a7d7f9;
     float: left;
     height: 124px;
     padding: 10px;
     width: 25%;
 }
 .singleAppHeader {
-	font-size: 16px;
+    font-size: 16px;
     font-weight: bold;
     text-align: center;
 }
 .singleAppDetails {
-	border-right: 2px dotted #a7d7f9;
+    border-right: 2px dotted #a7d7f9;
     float: left;
     height: 122px;
     padding: 10px;
     width: 20%;
 }
 .singleAppActions {
-	float: right;
+    float: right;
     padding: 10px;
     width: 28%;
     height: 123px;
 }
 .singleAppDescContent {
-	overflow-x: hidden;
+    overflow-x: hidden;
     overflow-y: scroll;
     height: 115px;
 }
 .singleAppActionsNoContent {
-	color: #ff0000;
+    color: #ff0000;
     font-size: 20px;
     font-weight: bold;
     padding: 30px 0 0;
     text-align: center;
 }
 .singleAppActionsContentSelect {
-	float: left;
-	width: 40%;
+    float: left;
+    width: 40%;
 }
 .singleAppActionsContentDesc {
-	float: left;
+    float: left;
     padding-left: 40px;
     width: 50%;
 }
 .singleAppActionSelect {
-	width: 100%;
-	height: 30px;
+    width: 100%;
+    height: 30px;
 }
 .singleAppActionSubmit {
-	height: 30px;
+    height: 30px;
     width: 110px;
 }
 .singleAppSubmitContainer {
-	margin: 10px 0 0 0;
+    margin: 10px 0 0 0;
 }
